Resolves: fdo#36678 regenerate language-specific user dict list

Regenerate language-specific user dict list when language of underlying text
changes. Not just when the user overrides it from the top menu.